--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
  
 </head>
 <body>
-
-  IP Address Tracker
-
-  Search for any IP address or domain
-
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+  <main>
+    <div class="overall-wrapper">
+      <div class="header">
+        <h1>IP Address Tracker</h1>
+        <div class="query">
+          <input type="text" placeholder="Search for any IP address or domain">
+          <button type="submit"><img src="./images/icon-arrow.svg"></button>
+        </div>
+      </div>
+      <div class="ip-info"></div>
+      <div class="map-wrapper"></div>
+    </div>
+  </main>
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
