--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <div class="header">
         <h1>IP Address Tracker</h1>
         <div class="query">
-          <input type="text" placeholder="Search for any IP address or domain">
+          <input type="text" class="ip-input" placeholder="Search for any IP address or domain">
           <button type="submit" class="submit-btn"><img src="./images/icon-arrow.svg"></button>
         </div>
       </div>
@@ -33,7 +33,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-      
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./script/index.js"></script>
 </body>
 </html>
